--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -36,13 +36,13 @@ about:
   home: https://github.com/deer-hunt/evargs
   license: MIT
   license_file: LICENSE.md
-  summary: '"EvArgs" is a lightweight python module for easy expression parsing and value-casting, validating by rules, and it provides flexible configuration and custom validation method.'
+  summary: '"EvArgs" is a Python module designed for value assignment, easy expression parsing, and type casting. It validates values based on defined rules and offers flexible configuration along with custom validation methods.'
   description: |
     [Features]:
     - It can specify the condition or value-assignment using a simple expression. e.g. "a=1;b=5"
     - Evaluate assigned values. e.g "evargs.evaluate('a', 1)"
     - Put values. It's available to using "put" is without parsing the expression.
-    - Value casting - str, int, float, complex...
+    - Type cast - str, int, bool, float, complex...
     - Value validation - unsigned, number range, alphabet, regex, any other...
     - Applying Pre-processing method and Post-processing method.
     - Get assigned values.
